refactor: yaml provider